// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bug: deps 变化后应 reload: deps 变化后加载中 1`] = `
Object {
  "data": Array [
    Array [
      1,
      0,
    ],
  ],
  "incrementalLoading": false,
  "initialLoading": true,
  "loadMore": [Function],
  "loading": true,
  "noMore": false,
  "pageNumber": 1,
  "reload": [Function],
  "total": 0,
}
`;

exports[`bug: deps 变化后应 reload: deps 变化后加载完成 1`] = `
Object {
  "data": Array [
    Array [
      1,
      1,
    ],
  ],
  "incrementalLoading": false,
  "initialLoading": false,
  "loadMore": [Function],
  "loading": false,
  "noMore": false,
  "pageNumber": 1,
  "reload": [Function],
  "total": 0,
}
`;
